--- a/.github/workflows/zshop.yml
+++ b/.github/workflows/zshop.yml
@@ -24,7 +24,7 @@ jobs:
       run: composer install --no-dev --optimize-autoloader
         
     - name: FTP-Deploy-Action
-      uses: mastertipster/zshop
+      uses: mastertipster/
       with:
         server: ${{ secrets.SERVER }}
         username: ${{ secrets.USERNAME }}
