--- a/.github/workflows/cpaneldeploymen.yml
+++ b/.github/workflows/cpaneldeploymen.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         fetch-depth: 2 
     - name: Build assets
-      run: npm install && npm run build
+      run: npm install
+    - name: run npm
+     run: npm run && npm audit fix --force
 
     - name: Install PHP and Composer
       uses: shivammathur/setup-php@v2
