--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,10 @@
 name: Publish Website to CPanel
+on:
+  push:
+    branches:
+      - main
+jobs:
+  FTP-Deploy-Action:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
@@ -7,8 +13,6 @@ name: Publish Website to CPanel
         fetch-depth: 2 
     - name: Build assets
       run: npm install
-    - name: run npm
-     run: npm run && npm audit fix --force
 
     - name: Install PHP and Composer
       uses: shivammathur/setup-php@v2
